chore(backend): adiciona .env.example com variáveis de ambiente esperadas

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,4 +28,4 @@ EMBEDDING_PROVIDER=cohere
 EMBEDDING_MODEL=embed-english-v3.0
 
 # === PERFOMANCE (auto | turbo | safe) ===
-PERFORMANCE_LEVEL=turbo
+PERFORMANCE_LEVEL=auto
