fix(router,metric,agent): corrigir classificação de temas, métrica comparativa e consulta adaptativa com tipagem segura

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,10 +22,9 @@ PINECONE_API_KEY=sua-chave-pinecone
 PINECONE_ENVIRONMENT=us-east-1
 PINECONE_INDEX=sua-index-pinecone
 
-# === COHERE (Fallback Semântico) ===
-COHERE_API_KEY=sua-chave-cohere
-EMBEDDING_PROVIDER=cohere
-EMBEDDING_MODEL=embed-english-v3.0
+# === EMBEDDING CONFIGURATION ===
+EMBEDDING_PROVIDER=local
+EMBEDDING_MODEL=BAAI/bge-small-en-v1.5
 
 # === PERFOMANCE (auto | turbo | safe) ===
 PERFORMANCE_LEVEL=auto
