--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,22 +3,22 @@ FROM node:20-slim
 
 WORKDIR /app
 
-# Copia pacotes e instala dependências do projeto
-COPY package*.json ./
-RUN npm install
+# Habilita Corepack (node>=16) para usar Yarn sem instalar global
+RUN corepack enable
 
-# Copia o restante do app (src, public, vite.config.ts, etc)
+# Copia apenas package.json + yarn.lock e instala com yarn
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
+
+# Copia o restante do código
 COPY . .
 
-# Instala ferramentas essenciais e o ngrok globalmente
-RUN apt-get update && apt-get install -y curl jq bash && rm -rf /var/lib/apt/lists/*
-RUN npm install -g ngrok
+# Instala ngrok (se ainda precisar)
+RUN apt-get update && apt-get install -y curl jq bash \
+    && rm -rf /var/lib/apt/lists/* \
+    && yarn global add ngrok \
+    && chmod +x ./ngrok/entrypoint.sh
 
-# Torna o script de entrada executável
-RUN chmod +x ./ngrok/entrypoint.sh
-
-# Expondo a porta do Vite (frontend)
 EXPOSE 8080
 
-# Comando principal
 CMD ["./ngrok/entrypoint.sh"]
