--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.6.3",
     "input-otp": "^1.2.4",
